Delete browser specific settings, update popup

--- a/src/popup/configs.html
+++ b/src/popup/configs.html
@@ -16,4 +16,5 @@
 </body>
 
 <script src="configs.js" type="text/javascript"></script>
+<script src="../browser-polufill.min.js" type="text/javascript"></script>
 </html>
